# libui

./: .gitignore  CMakeLists.txt  README.md  _clang-format  ui.h  ui_darwin.h  ui_unix.h  ui_windows.h
common/: CMakeLists.txt  attribute.c  attrstr.h  control.c  controlsigs.h  debug.c  shouldquit.c  table.h  tablemodel.c  tablevalue.c  uipriv.h  userbugs.c  utf.c  utf.h
darwin/: CMakeLists.txt  attrstr.h  box.m  button.m  checkbox.m  colorbutton.m  combobox.m  control.m  datetimepicker.m  editablecombo.m  entry.m  grid.m  group.m  label.m  main.m  menu.m  multilineentry.m  progressbar.m  radiobuttons.m  separator.m  slider.m  spinbox.m  stddialogs.m  tab.m  table.h  table.m  tablecolumn.m  uipriv_darwin.h  window.m  winmoveresize.m
doc/: model.xmi
examples/: CMakeLists.txt
test/: CMakeLists.txt  main.c  page16.c  page2.c  spaced.c  test.h
unix/: CMakeLists.txt  alloc.c  box.c  button.c  checkbox.c  colorbutton.c  combobox.c  control.c  datetimepicker.c  debug.c  editablecombo.c  entry.c  future.c  grid.c  group.c  image.c  label.c  main.c  menu.c  multilineentry.c  progressbar.c  radiobuttons.c  separator.c  slider.c  spinbox.c  stddialogs.c  tab.c  table.c  table.h  tablebutton.c  tablemodel.c  text.c  uipriv_unix.h  util.c  window.c
windows/: CMakeLists.txt  alloc.cpp  area.hpp  attrstr.hpp  box.cpp  button.cpp  checkbox.cpp  colorbutton.cpp  combobox.cpp  compilerver.hpp  control.cpp  d2dscratch.cpp  datetimepicker.cpp  draw.hpp  editablecombo.cpp  entry.cpp  grid.cpp  group.cpp  init.cpp  label.cpp  main.cpp  multilineentry.cpp  progressbar.cpp  slider.cpp  (+13 more)
(+5 files in other folders)
